--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,7 +1,20 @@
 .header {
     background: white;
-    padding-bottom: 2.8rem;
+    // padding: .75rem 0 3.2rem 0;
+    padding-top: .75rem;
+    height: 100px;
     position: relative;
+}
+
+.header__logo {
+    margin-right: 1.4rem;
+    animation-delay: 0ms;
+    animation-duration: 500ms;
+    animation-iteration-count: 1;
+}
+
+.header__widgets {
+    width: 100%;
 }
 
 .header a {
@@ -12,6 +25,8 @@
 .header__search-form {
     width: 100%;
     display: inline-flex;
+    place-content: center flex-start;
+    align-items: center;
     color: rgba(0, 0, 0, .65);
 }
 
