--- a/src/app/components/movie-details/movie-details.component.html
+++ b/src/app/components/movie-details/movie-details.component.html
@@ -12,7 +12,7 @@
                     </div>
                     <ul class="movie-details__models">
                         <li class="movie-details__model" *ngFor="let model of movie.models;">
-                            <a [routerLink]="['/recent', 1]" [queryParams]="{models: model.modelId}">{{model.name}}</a>
+                            <a [routerLink]="['/recent', 1]" [queryParams]="{models: model.name}">{{model.name}}</a>
                         </li>
                     </ul>
                 </div>
@@ -27,17 +27,18 @@
             <div class="movie-details__item">
                 <h3 class="movie-details__item__subtitle">Categories</h3>
                 <div class="movie-details__categories">
-                    <a class="movie-details__category" mat-flat-button color="accent" *ngFor="let category of movie.categories;"
-                        [routerLink]="['recent', 1]" [queryParams]="{categories: category.name.toLowerCase()}">
+                    <a class="movie-details__category" mat-flat-button color="accent" *ngFor="let category of movie.categories;" [routerLink]="['recent', 1]" [queryParams]="{categories: category.name.toLowerCase()}">
                         {{category.name}}
+                    </a>
+                    <a class="movie-details__category" mat-flat-button color="primary" (click)="addMissingCategory(58)" *ngIf="!hasCategory(58)">
+                        ADD STOCKINGS
                     </a>
                 </div>
             </div>
             <div class="movie-details__item" *ngIf="movie.attachments.length > 1">
                 <h3 class="movie-details__item__subtitle">More scenes from movie</h3>
                 <div class="movie-details__attachments">
-                    <div mat-ripple class="movie-details__attachment" *ngFor="let attachment of movie.attachments; let index = index;"
-                        (click)="preview(index)">
+                    <div mat-ripple class="movie-details__attachment" *ngFor="let attachment of movie.attachments; let index = index;" (click)="preview(index)">
                         <img [src]="attachment.uri" alt="attachment{{attachment.attachmentId}}">
                     </div>
                 </div>
